<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:layout_margin="16dp"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/dialog_add_user_email_hint"
        android:id="@+id/dialog_add_person_et"
        />

    <Button
        android:text="@string/dialog_add_user_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/dialog_add_person_et"
        android:layout_alignLeft="@+id/dialog_add_person_et"
        android:layout_alignStart="@+id/dialog_add_person_et"
        android:id="@+id/dialog_add_person_btn_cancel" />

    <Button
        android:text="@string/dialog_add_user_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/dialog_add_person_et"
        android:layout_alignRight="@+id/dialog_add_person_et"
        android:layout_alignEnd="@+id/dialog_add_person_et"
        android:id="@+id/dialog_add_person_btn_ok"
        android:backgroundTint="@color/input_keyboard_btn_save"
        />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_add_person_progressBar"
        android:layout_below="@+id/dialog_add_person_et"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"

        />

</RelativeLayout>