<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_budget_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="8dp"
    card_view:cardMaxElevation="6dp"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardBackgroundColor="@color/input_up_buttons_background"
    android:foreground="?android:attr/selectableItemBackground"
    >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">







        <android.support.v7.widget.CardView

            android:id="@+id/dialog_budget_card_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="13dp"
            card_view:cardBackgroundColor="@color/input_up_buttons_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dialog_budget_card_category_iv"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/categ_jobs"
                app:border_width="2dp"
                app:border_color="@color/category_circle_border"
                />


        </android.support.v7.widget.CardView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_budget_create"
            android:id="@+id/dialog_budget_create"
            android:layout_below="@+id/dialog_budget_amount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialog_budget_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/view_card_category"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="8dp"

            android:layout_below="@+id/dialog_budget_recycler_view"
            android:layout_alignLeft="@+id/dialog_budget_create"
            android:layout_alignStart="@+id/dialog_budget_create"
            android:id="@+id/dialog_budget_radioGroup">

            <RadioButton
                android:text="@string/dialog_budget_in_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_budget_year"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/dialog_budget_in_month"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_budget_month" />

            <RadioButton
                android:text="@string/dialog_budget_in_week"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_budget_week" />
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:background="@drawable/amount_background"
            android:id="@+id/dialog_budget_amount"
            android:hint="@string/dialog_budget_amount"
            android:layout_below="@+id/dialog_budget_radioGroup"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</android.support.v7.widget.CardView>