<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >





    <android.support.v7.widget.RecyclerView
        android:id="@+id/payments_recycler_view"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/view_card_category"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.CardView

        android:id="@+id/payments_card_choose_dayInMonth"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="8dp"
        card_view:cardMaxElevation="6dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        card_view:cardBackgroundColor="@color/input_amount_card_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="false"
        android:visibility="gone"
        android:layout_below="@+id/payments_card_name"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/payments_choose_day"
            android:background="@drawable/amount_background"
            android:layout_gravity="center_horizontal"/>

        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/payments_numberPicker" />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView

        android:id="@+id/payments_card_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        app:contentPaddingLeft="24dp"
        app:contentPaddingRight="24dp"
        card_view:cardBackgroundColor="@color/input_up_buttons_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/payments_card_category_iv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/categ_jobs"
            app:border_width="2dp"
            app:border_color="@color/category_circle_border"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_column="1"
            android:id="@+id/payments_category_tv"
            android:gravity="center_horizontal"
            android:lines="1"
            />


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView

        android:id="@+id/payments_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        card_view:cardBackgroundColor="@color/input_amount_card_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_below="@+id/payments_card_category"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/payments_radioGroup"
                android:layout_below="@+id/payments_amount"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"


                android:visibility="visible"
                >

                <RadioButton
                    android:text="@string/payments_every_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payments_day"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/payments_every_week"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payments_week" />

                <RadioButton
                    android:text="@string/payments_every_month"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payments_month" />

            </RadioGroup>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:inputType="textPersonName"
                android:hint="@string/payments_payment_name"
                android:imeOptions="actionNext"
                android:lines="1"
                android:gravity="center"
                android:background="@drawable/amount_background"
                android:id="@+id/payments_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="8dp"
                android:showText="true"
                android:id="@+id/payments_switch"
                android:layout_weight="1"
                android:textOff="@string/switch_expense"
                android:textOn="@string/switch_income"
                android:switchMinWidth="76dp"
                android:thumb="@drawable/switch_thumb_input"
                android:track="@drawable/switch_track_input"

                android:layout_below="@+id/payments_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_gravity="right"
                android:gravity="center"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/amount_background"
                android:id="@+id/payments_amount"
                android:imeOptions="actionDone"
                android:lines="1"
                android:maxLength="6"
                android:layout_alignBaseline="@+id/payments_switch"
                android:layout_alignBottom="@+id/payments_switch"
                android:layout_alignLeft="@+id/payments_name"
                android:layout_alignStart="@+id/payments_name"
                android:layout_toLeftOf="@+id/payments_switch"
                android:layout_toStartOf="@+id/payments_switch" />

        </RelativeLayout>



    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:backgroundTint="@color/input_keyboard_btn_save"
        android:id="@+id/payments_input_ok_btn"
        android:layout_weight="1"
        android:text="@string/payments_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>