<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/transaction_total_balance_card"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp"
            card_view:cardMaxElevation="6dp"
            android:orientation="horizontal"
            android:layout_marginTop="-4dp"
            card_view:contentPaddingLeft="10dp"
            card_view:contentPaddingRight="10dp"
            card_view:cardBackgroundColor="@color/trList_balance_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:animateLayoutChanges="true"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_horizontal"
                android:id="@+id/transaction_total_balance_tv"

                android:layout_centerHorizontal="true" />

        </android.support.v7.widget.CardView>


        <ExpandableListView

            android:id="@+id/transaction_lv"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/transaction_total_balance_card"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/transaction_radio_card"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_radio_card"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp"
            card_view:cardMaxElevation="6dp"
            android:orientation="horizontal"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            card_view:contentPaddingLeft="8dp"
            card_view:contentPaddingRight="8dp"
            card_view:contentPaddingTop="4dp"
            card_view:contentPaddingBottom="8dp"
            android:layout_marginBottom="-4dp"
            card_view:cardBackgroundColor="@color/trList_bottom_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"

            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:id="@+id/transaction_radioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transactions_radio_month"
                    android:layout_weight="1"
                    android:id="@+id/transaction_radio_month"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transactions_radio_week"
                    android:layout_weight="1"
                    android:id="@+id/transaction_radio_week"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transactions_radio_day"
                    android:layout_weight="1"
                    android:id="@+id/transaction_radio_day"/>

            </RadioGroup>

        </android.support.v7.widget.CardView>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/transaction_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:background="@color/trList_bottom_sheet_background"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_sheet_deleted"
                android:padding="16dp"
                android:layout_weight="1"
                android:textSize="16sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transaction_btnDelete_cancel"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/trList_bottom_sheet_btn"
                android:text="@string/bottom_sheet_revoke"/>

        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>